Fixed spacing on user header pic, name, occupation

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -45,8 +45,12 @@ label {
   font-weight: 600;
 }
 
+.content {
+  width: 70%
+}
+
 .decimals {
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 .medium-text {
@@ -88,6 +92,10 @@ label {
   }
 }
 
+.occupation-container {
+  max-width: 100px;
+}
+
 .post {
   color: $dark-grey;
   font-weight: 300;
@@ -96,8 +104,10 @@ label {
 
 .profile-pic {
   border-radius: 50%;
-  height: 4rem;
-  width: 4rem;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
 }
 
 .small-avatar {
@@ -130,9 +140,10 @@ label {
 
 .user-header-occupation {
   align-items: left;
-  font-size: .3rem;
+  font-size: .4rem;
   font-style: italic;
   font-weight: 200;
+  text-align: left;
   text-transform: uppercase;
 }
 
@@ -146,7 +157,7 @@ label {
 .sidebar {
   margin: 0;
   padding: 0;
-  width: 25vw;
+  width: 20%;
   height: 100vh;
   position: fixed;
   overflow: auto;
